\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}
\name{NEWS}
\title{OutlierDC News}
\encoding{UTF-8}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.1.1 2017-10-30}{
  \itemize{
    \item Arrange NAMESPACE
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.1.0 2017-01-18}{
  \itemize{
    \item Arrange NAMESPACE
  }
}

% ---------------------------------------------------------------------------- %
\section{Changes in version 1.0.0 2015-05-31}{
  \itemize{
    \item Add new cut-off criteria for the scoring algorithm by using a distribution-free approach
    \item Add new function odc.boot() to provide the criteria for the scoring algorithm
    \item Add new option to provide Cox PH model and its related several residuals
    \item Change input arguments more conveniently
  }
}

\section{Changes in version 0.3-0 2014-03-23}{
  \itemize{
    \item Improve help pages
  }
}

\section{Changes in version 0.2.5}{
  \itemize{
    \item Bug fixed in odc() function
  }
}

\section{Changes in version 0.2.3}{
  \itemize{
    \item Support R-3.0.x
    \item Add an option to select the boundary of outliers: both, upper, and lower bound
  }
}

\section{Changes in version 0.2.2}{
  \itemize{
    \item Support multiple covariates in locally weighted censored quantile regression
  }
}

\section{Changes in version 0.2.1}{
  \itemize{
    \item Bug fixed in the function odc()
  }
}

\section{Changes in version 0.2.0}{
  \itemize{
    \item Publish the package on CRAN
  }
}